fix :overflow hidden

--- a/containers/LandingPage/LinerProducts/LinerProducts.module.scss
+++ b/containers/LandingPage/LinerProducts/LinerProducts.module.scss
@@ -7,6 +7,7 @@ $color5: #91a6c1;
 $color6: #d4d8e1;
 .lineProduct {
     // margin-top: 10px;
+    overflow: hidden;
     .header {
         display: flex;
         justify-content: space-between;
